--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -205,8 +205,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="12dp"
-            app:cardElevation="10dp"
             app:cardBackgroundColor="?attr/scrimBackground"
+            app:cardElevation="10dp"
             app:contentPadding="5dp">
 
             <ImageView
@@ -221,9 +221,9 @@
             android:id="@+id/cv3"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:cardElevation="10dp"
             android:layout_marginStart="12dp"
             app:cardBackgroundColor="?attr/scrimBackground"
+            app:cardElevation="10dp"
             app:contentPadding="5dp">
 
             <ImageView
@@ -241,10 +241,10 @@
         android:layout_height="77dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/ic_corner"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:orientation="horizontal"
-        android:weightSum="3">
+        android:weightSum="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -267,12 +267,17 @@
                     android:textColor="@color/greyp"
                     android:textSize="20sp" />
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <TextView
                     android:id="@+id/pkb_level"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
-                    android:layout_marginStart="60dp"
+                    android:paddingBottom="2dp"
                     android:text="@string/level"
                     android:textColor="@color/greyp"
                     android:textSize="16sp" />
@@ -283,7 +288,7 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
+                android:layout_marginStart="40dp"
                 android:progressTint="@color/greenhp" />
 
             <LinearLayout
@@ -339,12 +344,10 @@
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/space"
+        <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@android:color/transparent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
     </LinearLayout>
 
@@ -353,68 +356,92 @@
         android:layout_width="259dp"
         android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/ic_corner"
+        android:rotation="180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:rotation="180"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_corner" />
+            android:weightSum="3">
 
-        <TextView
-            android:id="@+id/pk_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="75dp"
-            android:text="@string/pokemon_ejemplo"
-            android:textColor="@color/greyp"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/pk_level"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5" />
 
-        <TextView
-            android:id="@+id/pk_level"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="20dp"
-            android:text="@string/level"
-            android:textColor="@color/greyp"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/pkstatus"
-            android:layout_width="34dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="30dp"
-            android:contentDescription="@string/status"
-            app:layout_constraintEnd_toEndOf="@+id/pk_name"
-            app:layout_constraintTop_toBottomOf="@+id/pk_name"
-            app:srcCompat="@drawable/quemado"
-            tools:ignore="ImageContrastCheck" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <ProgressBar
-            android:id="@+id/pk_hpBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="6dp"
-            android:layout_marginEnd="5dp"
-            android:progressTint="@color/greenhp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/pkstatus"
-            app:layout_constraintTop_toBottomOf="@+id/pk_name" />
+                    <TextView
+                        android:id="@+id/pk_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/pokemon_ejemplo"
+                        android:textColor="@color/greyp"
+                        android:textSize="20sp" />
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/pk_level"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginEnd="10dp"
+                        android:paddingBottom="2dp"
+                        android:text="@string/level"
+                        android:textColor="@color/greyp"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/pkstatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/status"
+                        android:paddingTop="5dp"
+                        android:paddingRight="2dp"
+                        app:srcCompat="@drawable/congelado"
+                        tools:ignore="ImageContrastCheck" />
+
+                    <ProgressBar
+                        android:id="@+id/pk_hpBar"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="0.40"
+                        android:progressTint="@color/greenhp" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
