--- a/PokemonShowdown/app/src/main/res/layout/list_element.xml
+++ b/PokemonShowdown/app/src/main/res/layout/list_element.xml
@@ -22,7 +22,7 @@
             android:id="@+id/cd"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:contentDescription="to do"
+            android:contentDescription="@string/disco"
             app:srcCompat="@drawable/p003" />
 
         <TextView
@@ -33,7 +33,7 @@
             android:layout_marginStart="25dp"
             android:layout_marginTop="11dp"
             android:layout_toEndOf="@+id/cd"
-            android:text="Guillotina"
+            android:text="@string/name_move"
             android:textColor="#94000000"
             android:textSize="20sp" />
 
@@ -45,7 +45,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="27dp"
             android:layout_marginEnd="28dp"
-            android:text="Mucha"
+            android:text="@string/precision"
             android:textColor="#94000000" />
 
         <TextView
@@ -56,7 +56,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="18dp"
             android:layout_marginEnd="21dp"
-            android:text="TextView" />
+            android:text="@string/potency"
+            android:textColor="#616161" />
 
         <ImageView
             android:id="@+id/mov_type"
@@ -65,6 +66,7 @@
             android:layout_below="@+id/mov_name"
             android:layout_marginStart="35dp"
             android:layout_marginTop="25dp"
+            android:contentDescription="@string/move_type"
             android:layout_toEndOf="@+id/cd"
             app:srcCompat="@drawable/p003" />
 
