--- a/PokemonShowdown/app/src/main/res/layout/activity_battle.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_battle.xml
@@ -146,6 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -267,9 +268,10 @@
 
                 <LinearLayout
                     android:id="@+id/pkbhealth"
-                    android:layout_width="90dp"
+                    android:layout_width="match_parent"
                     android:layout_height="20dp"
                     android:layout_marginStart="24dp"
+                    android:layout_weight="0.80"
                     android:orientation="horizontal">
 
                     <TextView
@@ -300,10 +302,16 @@
                         android:textColor="@color/greyp" />
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <ImageView
                     android:id="@+id/pkbstatus"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_weight="0.95"
                     android:contentDescription="@string/status"
                     android:paddingBottom="5dp"
                     app:srcCompat="@drawable/quemado"
